--- a/src/view/main/main.less
+++ b/src/view/main/main.less
@@ -2,12 +2,8 @@
   .logo-con{
     height: 64px;
     padding: 10px;
-    img{
-      height: 44px;
-      width: auto;
-      display: block;
-      margin: 0 auto;
-    }
+    color: #fff;
+    text-align: center;
   }
   .header-con{
     background: #fff;
