--- a/src/view/main/components/user/user.less
+++ b/src/view/main/components/user/user.less
@@ -1,8 +1,10 @@
-.user{
-  &-avator-dropdown{
-    display: inline-block;
-    height: 32px;
-    vertical-align: middle;
-    line-height: 10px;
+.user-avator-dropdown{
+  display: inline-block;
+  height: 32px;
+  vertical-align: middle;
+  line-height: 10px;
+  margin-right: 20px;
+  .ivu-select-dropdown {
+    z-index: 99;
   }
 }
