--- a/src/view/main/main.less
+++ b/src/view/main/main.less
@@ -13,7 +13,7 @@
     z-index: 1;
     .lock-screen-btn-con{
       position: absolute;
-      right: 120px;
+      right: 150px;
       top: 0;
       z-index: 999;
       display: inline-block;
@@ -42,7 +42,20 @@
   }
 }
 
-.user-dropdown-innercon {
+.user-dropdown-menu-con {
   height: 46px;
+  line-height: 46px;
   margin-right: 20px;
+  .ivu-dropdown {
+    height: 46px;
+    .ivu-dropdown-rel {
+      height: 46px;
+      a {
+        display: inline-block;
+      }
+    }
+  }
+  .main-user-name {
+    width: 90px;
+  }
 }
