--- a/src/view/main/main.less
+++ b/src/view/main/main.less
@@ -18,9 +18,16 @@
       z-index: 999;
       display: inline-block;
       width: 30px;
+      height: 40px;
       text-align: center;
       cursor: pointer;
-      i{
+      .ivu-tooltip {
+        height: 40px;
+      }
+      .ivu-tooltip-rel {
+        height: 40px;
+      }
+      i {
         vertical-align: middle;
       }
     }
