--- a/src/view/main/main.less
+++ b/src/view/main/main.less
@@ -40,6 +40,26 @@
       padding: 10px;
       overflow: hidden;
     }
+    .full-screen-btn-con {
+      position: absolute;
+      right: 190px;
+      top: 0;
+      z-index: 999;
+      display: inline-block;
+      width: 30px;
+      height: 40px;
+      text-align: center;
+      cursor: pointer;
+      .ivu-tooltip {
+        height: 40px;
+      }
+      .ivu-tooltip-rel {
+        height: 40px;
+      }
+      i {
+        vertical-align: middle;
+      }
+    }
   }
   .tag-nav-wrapper{
     padding: 0;
