--- a/src/view/main/main.less
+++ b/src/view/main/main.less
@@ -13,12 +13,11 @@
     z-index: 1;
     .lock-screen-btn-con{
       position: absolute;
-      right: 150px;
-      top: 0;
+      left: 65px;
+      top: -3px;
       z-index: 999;
       display: inline-block;
       width: 30px;
-      height: 40px;
       text-align: center;
       cursor: pointer;
       .ivu-tooltip {
@@ -42,8 +41,8 @@
     }
     .full-screen-btn-con {
       position: absolute;
-      right: 190px;
-      top: 0;
+      left: 100px;
+      top: -3px;
       z-index: 999;
       display: inline-block;
       width: 30px;
@@ -71,8 +70,8 @@
 
 .user-dropdown-menu-con {
   height: 46px;
-  line-height: 46px;
-  margin-right: 20px;
+  line-height: 40px;
+  margin-right: 10px;
   .ivu-dropdown {
     height: 46px;
     .ivu-dropdown-rel {
